[metadata]
name=django-th
description="The bus for your internet services"
author=FoxMaSk
author_email=foxmask protonmail
maintainer=FoxMaSk
maintainer_email=foxmask protonmail
version=attr: django_th.__version__
url=https://github.com/push-things/django-th
download_url="https://github.com/push-things/django-th/archive/trigger-happy-" + version + ".zip"
packages=find_packages()
long_description=file: README.rst
license= BSD License
keywords=django-th, microservices, twitter, mastodon, github, joplin, rss, evernote, pocket, wallabag, pelican, pushbullet, trello, reddit, trello

classifiers=
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Communications
    Topic :: Database


[options]
zip_safe=false

include_package_data=true

install_requires=
    joplin-api==1.2.2
    djangorestframework>=3.7.7,<4.0
    django-filter
    Django>=2.0,<3.0
    django-formtools==2.1
    arrow
    django-js-reverse
    django-redis
    requests-oauthlib
    pypandoc==1.4
    django-environ
    evernote3
    pytidylib==0.3.2
    github3.py
    Mastodon.py
    awesome-slugify
    pocket
    pushbullet.py
    praw
    feedparser==5.2.1
    python-taiga
    todoist-python
    py-trello
    pytz
    PyTumblr
    twython


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=migrations,*settings*.py,feedsservice,.tox,build,from_*

